--- a/config/database.yml
+++ b/config/database.yml
@@ -14,7 +14,8 @@ development:
   database: sample_shop_db
   username: root
   password: root
-  host: db
+  host: 127.0.0.1
+  port: 8889
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
